--- a/10-synaptics.conf
+++ b/10-synaptics.conf
@@ -1,1 +1,18 @@
-/home/mitja/AUR/xf86-input-synaptics-mtpatch/10-synaptics.conf
+Section "InputClass"
+        Identifier "touchpad catchall"
+        Driver "synaptics"
+        MatchIsTouchpad "on"
+        MatchDevicePath "/dev/input/event*"
+
+	#Passthrough all multitouch events
+        Option "TapButton1" "1"
+        Option "TapButton2" "0"
+        Option "TapButton3" "0"
+	Option "ClickFinger2" "0"
+	Option "ClickFinger3" "0"
+
+	#Disable two-finger scroll (segfault?)
+	Option "VertTwoFingerScroll" "0"
+	Option "HorzTwoFingerScroll" "0"
+
+EndSection
