--- a/10-synaptics.conf
+++ b/10-synaptics.conf
@@ -1,18 +1,81 @@
 Section "InputClass"
-        Identifier "touchpad catchall"
-        Driver "synaptics"
-        MatchIsTouchpad "on"
-        MatchDevicePath "/dev/input/event*"
-
-	#Passthrough all multitouch events
-        Option "TapButton1" "1"
-        Option "TapButton2" "0"
-        Option "TapButton3" "0"
-	Option "ClickFinger2" "0"
-	Option "ClickFinger3" "0"
-
-	#Disable two-finger scroll (segfault?)
-	Option "VertTwoFingerScroll" "0"
-	Option "HorzTwoFingerScroll" "0"
-
+	Identifier "touchpad catchall"
+	Driver "synaptics"
+	MatchIsTouchpad "on"
+	MatchDevicePath "/dev/input/event*"
+	Option "LeftEdge" "136"
+	Option "RightEdge" "3284"
+	Option "TopEdge" "110"
+	Option "BottomEdge" "1942"
+	Option "FingerLow" "6"
+	Option "FingerHigh" "20"
+	Option "FingerPress" "256"
+	Option "MaxTapTime" "180"
+	Option "MaxTapMove" "175"
+	Option "MaxDoubleTapTime" "180"
+	Option "SingleTapTimeout" "180"
+	Option "ClickTime" "100"
+	Option "FastTaps" "0"
+	Option "EmulateMidButtonTime" "0"
+	Option "EmulateTwoFingerMinZ" "282"
+	Option "EmulateTwoFingerMinW" "7"
+	Option "VertScrollDelta" "79"
+	Option "HorizScrollDelta" "79"
+	Option "VertEdgeScroll" "0"
+	Option "HorizEdgeScroll" "0"
+	Option "CornerCoasting" "0"
+	Option "VertTwoFingerScroll" "1"
+	Option "HorizTwoFingerScroll" "1"
+	Option "MinSpeed" "0.3"
+	Option "MaxSpeed" "1.7"
+	Option "AccelFactor" "0.0501505"
+	Option "TrackstickSpeed" "40"
+	Option "EdgeMotionMinZ" "30"
+	Option "EdgeMotionMaxZ" "160"
+	Option "EdgeMotionMinSpeed" "1"
+	Option "EdgeMotionMaxSpeed" "319"
+	Option "EdgeMotionUseAlways" "0"
+	Option "TouchpadOff" "0"
+	Option "LockedDrags" "0"
+	Option "LockedDragTimeout" "5000"
+	Option "RTCornerButton" "0"
+	Option "RBCornerButton" "0"
+	Option "LTCornerButton" "0"
+	Option "LBCornerButton" "0"
+	Option "TapButton1" "1"
+	Option "TapButton2" "2"
+	Option "TapButton3" "0"
+	Option "ClickFinger1" "1"
+	Option "ClickFinger2" "2"
+	Option "ClickFinger3" "3"
+	Option "CircularScrolling" "1"
+	Option "CircScrollDelta" "0.1"
+	Option "CircScrollTrigger" "0"
+	Option "CircularPad" "0"
+	Option "PalmDetect" "1"
+	Option "PalmMinWidth" "6"
+	Option "PalmMinZ" "2"
+	Option "CoastingSpeed" "20"
+	Option "CoastingFriction" "50"
+	Option "PressureMotionMinZ" "30"
+	Option "PressureMotionMaxZ" "160"
+	Option "PressureMotionMinFactor" "1"
+	Option "PressureMotionMaxFactor" "1"
+	Option "GrabEventDevice" "0"
+	Option "TapAndDragGesture" "1"
+	Option "AreaLeftEdge" "0"
+	Option "AreaRightEdge" "0"
+	Option "AreaTopEdge" "0"
+	Option "AreaBottomEdge" "0"
+	Option "HorizHysteresis" "19"
+	Option "VertHysteresis" "19"
+	Option "ClickPad" "1"
+	Option "RightButtonAreaLeft" "0"
+	Option "RightButtonAreaRight" "0"
+	Option "RightButtonAreaTop" "0"
+	Option "RightButtonAreaBottom" "0"
+	Option "MiddleButtonAreaLeft" "0"
+	Option "MiddleButtonAreaRight" "0"
+	Option "MiddleButtonAreaTop" "0"
+	Option "MiddleButtonAreaBottom" "0"
 EndSection
